tests/init/neg/local-warm4.check
-- Error: tests/init/neg/local-warm4.scala:18:20 -----------------------------------------------------------------------
18 |                a = newA // error
   |                    ^^^^
   |       Cannot prove that the value is fully initialized. May only assign fully initialized value. Calling trace:
   |        -> val a = new A(5)	[ local-warm4.scala:26 ]
   |           -> class A(x: Int) extends Foo(x) {	[ local-warm4.scala:6 ]
   |            -> val b = new B(y)	[ local-warm4.scala:10 ]
   |               -> class B(x: Int) extends A(x) {	[ local-warm4.scala:13 ]
   |                -> if y < 10 then increment()	[ local-warm4.scala:23 ]
   |                 -> updateA()	[ local-warm4.scala:21 ]
